continue implementation of plak3
