# internal/models/searchmodels/search_plak3_user.go
@@ -1,3 +1,8 @@
 package searchmodels
 
-type UserSearchCriteria struct{}
+type UserSearchCriteria struct {
+	ID        int64  `json:"Id"`
+	FirstName string `json:"firstName,omitempty"`
+	LastName  string `json:"lastName,omitempty"`
+	Email     string `json:"email,omitempty"`
+}
